# ops-switchd-p4switch-plugin

./: DESIGN.md  Makefile.am  README.md  configure.ac
include/: netdev-p4-sim.h  ofproto-p4-sim-provider.h  p4-switch.h
src/: netdev-p4-sim.c  ofproto-p4-sim-provider.c  p4-sim-plugins.c  p4-switch.c
tests/: test_switchd_p4switch_ct_l2_trunk_lag.py  test_switchd_p4switch_ct_l3_vi_routing.py
